# mvp

./: .gitignore  FAVORITES_MIGRATION.md  package-lock.json  package.json  pyproject.toml  seed_data.py  tailwind.config.js
app/: __init__.py  forms.py
app/blueprints/: __init__.py
app/blueprints/auth/: forms.py  views.py
app/blueprints/community/: __init__.py  forms.py  views.py
app/blueprints/dashboard/: __init__.py  forms.py  views.py
app/blueprints/favorites/: __init__.py  views.py
app/blueprints/main/: __init__.py  views.py
app/blueprints/notifications/: __init__.py  views.py
app/blueprints/planner/: __init__.py  forms.py  views.py
app/blueprints/profile/: __init__.py  views.py
app/blueprints/shopping/: __init__.py  forms.py  views.py
app/core/: config.py
app/models/: __init__.py  __inti__.py  category.py  collection.py  comment.py  favorite.py  image.py  ingredients.py  kyc.py  language.py  meal.py  origin.py  post.py  preference.py  recipe.py  review.py  shopping_list.py  stat.py  step.py  task.py  user.py  video.py
app/repository/: user.py
app/services/: dynamic_translation.py  nutrition.py  translation.py
app/services/oauth/: base.py  (+1 more)
app/templates/: base.html  index.html
app/utils/: func.py
migrations/versions/: 1532ac7db848_add_missing_notes_column_to_ingredients_.py  1cb157e8d6ec_rename_comment_text_to_content_in_.py  228034533a2c_add_post_id_to_images_table.py  7915fca10e64_add_title_and_content_to_post_model.py  d6ee5dba23a3_update_comment_model_with_user_id_type_.py  f4fe28ceada3_fix_post_user_id_type_and_add_author_.py
(+30 files in other folders)
