[project]
name = "odigo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "pydantic>=2.11.7",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-wtf>=1.2.2",
    "loguru>=0.7.3",
    "email-validator>=2.3.0",
]
